--- a/.github/workflows/route-content-pipelines.yml
+++ b/.github/workflows/route-content-pipelines.yml
@@ -23,7 +23,6 @@ jobs:
             const repo = context.repo.repo;
             const issue_number = context.issue.number;
             const issue = context.payload.issue;
-            const issueTitle = issue.title || '';
 
             const labels = new Set((issue.labels || []).map((l) => l.name));
 
@@ -42,11 +41,6 @@ jobs:
               if (['pipeline:newsletter', 'newsletter-post'].includes(context.payload.label.name)) pipeline = 'newsletter';
             }
 
-            if (!pipeline) {
-              if (/^Blog:/i.test(issueTitle)) pipeline = 'blogpost';
-              if (/^Newsletter:/i.test(issueTitle)) pipeline = 'newsletter';
-            }
-
             const ensureLabelExists = async (name, color, description) => {
               const labelExists = await github.rest.issues.getLabel({ owner, repo, name }).then(() => true).catch(() => false);
               if (!labelExists) {
@@ -62,6 +56,9 @@ jobs:
               }
               if (labels.has('pipeline:newsletter')) {
                 await github.rest.issues.removeLabel({ owner, repo, issue_number, name: 'pipeline:newsletter' }).catch(() => null);
+              }
+              if (labels.has('newsletter-post')) {
+                await github.rest.issues.removeLabel({ owner, repo, issue_number, name: 'newsletter-post' }).catch(() => null);
               }
             } else if (pipeline === 'newsletter') {
               await ensureLabelExists('pipeline:newsletter', '0e8a16', 'Conteudo de newsletter');
@@ -82,23 +79,39 @@ jobs:
 
             const queryProjectItems = async (projectId) => {
               if (!projectId) return [];
-              const result = await github.graphql(`
-                query($projectId: ID!) {
-                  node(id: $projectId) {
-                    ... on ProjectV2 {
-                      items(first: 100) {
-                        nodes {
-                          id
-                          content {
-                            ... on Issue { id }
+              const nodes = [];
+              let hasNextPage = true;
+              let cursor = null;
+
+              while (hasNextPage) {
+                const result = await github.graphql(`
+                  query($projectId: ID!, $cursor: String) {
+                    node(id: $projectId) {
+                      ... on ProjectV2 {
+                        items(first: 100, after: $cursor) {
+                          nodes {
+                            id
+                            content {
+                              ... on Issue { id }
+                            }
+                          }
+                          pageInfo {
+                            hasNextPage
+                            endCursor
                           }
                         }
                       }
                     }
                   }
-                }
-              `, { projectId });
-              return result?.node?.items?.nodes || [];
+                `, { projectId, cursor });
+
+                const batch = result?.node?.items?.nodes || [];
+                nodes.push(...batch);
+                hasNextPage = result?.node?.items?.pageInfo?.hasNextPage || false;
+                cursor = result?.node?.items?.pageInfo?.endCursor || null;
+              }
+
+              return nodes;
             };
 
             const addToProject = async (projectId, contentId) => {
